feat: add WCP section

--- a/src/pages/docs/release-notes/5.29.0/changelog.mdx
+++ b/src/pages/docs/release-notes/5.29.0/changelog.mdx
@@ -6,6 +6,8 @@ description: See what's new in Webiny version 5.29.0.
 
 import { Alert } from "@/components/Alert"
 import loadingIdentityOverlay from "./loadingIdentityOverlay.gif";
+import wcpSplash from "./wcpSplash.png";
+import wcpDashboard from "./wcpDashboard.png";
 
 # Changes
 
@@ -18,9 +20,29 @@ This release contains lots of important upgrades, from developer experience, to 
 </Alert>
 
 
-## Webiny Control Panel
+## Webiny Control Panel (Alpha)
 
-// Adrian (a video of CLI login or WCP dashboard maybe?)
+<Image src={wcpSplash} shadow={false} canEnlarge={false}/>
+
+Finally, after several months in the making, we're proud to present **Webiny Control Panel (Alpha)**!
+
+Webiny Control Panel is a brand new service that will provide additional benefits on top of existing Webiny projects! 
+
+For starters, it will enable teams to have a better overview of what's happening in their Webiny projects. Tracking the number of GraphQL API calls, CI/CD environments, and team members are just some of the features that are included in this initial Alpha release.
+
+<Image src={wcpDashboard}/>
+
+Webiny Control Panel will also provide a way to unlock special Webiny features, like **Multitenancy** and soon-to-be-available **Advanced Publishing Workflows**. And this is just the beginning! We already have a couple of other cool features on our roadmap, so definitely stay tuned for that.
+
+Ultimately, we believe that, with Webiny Control Panel, users will have a much easier way of managing multiple Webiny projects. And, with the new Webiny features that it will unlock, users will be able to take their Webiny projects to the next level.
+
+Sounds interesting? Head over to https://app.webiny.com and create your first Webiny Control Panel account today!      
+
+<Alert type="warning" title="Can I Use This?">
+
+At the moment, Webiny Control Panel can only be activated with new projects created with Webiny version **5.29.0** or greater. But, if you have an existing project already that you'd like to activate, feel free to get in touch with us on our [Community Slack](https://www.webiny.com/slack). We'd be glad to assist!
+
+</Alert>
 
 ## Prerendering Service
 
