fix: add links to AWS services

--- a/src/pages/docs/release-notes/5.29.0/changelog.mdx
+++ b/src/pages/docs/release-notes/5.29.0/changelog.mdx
@@ -50,7 +50,7 @@ Prerendering Service is a complex engine running in the background to prerender 
 
 ### Migrate to Event Driven Architecture ([#2469](https://github.com/webiny/webiny-js/pull/2469))
 
-Until this release, the Prerendering Service used a cron job to check if there are any tasks that need processing (every 5 minutes, by default). With the migration to event-driven approach, we now use Event Buses and SQS Queues to issue and process prerendering jobs immediately, in a faster, and more scalable manner. 
+Until this release, the Prerendering Service used a cron job to check if there are any tasks that need processing (every 5 minutes, by default). With the migration to event-driven approach, we now use [Amazon EventBridge](https://aws.amazon.com/eventbridge/) and [Amazon SQS](https://aws.amazon.com/sqs/) to issue and process prerendering jobs immediately, in a faster, and more scalable manner. 
 
 The internals of the Prerendering Service were rewritten to play nicer with parallel rendering, juggle less data to and from the database, and handle different tenancy setups in a robust way. Database records were also redesigned to optimize for various access patterns.
 
