docs: add development-related items

--- a/src/pages/docs/release-notes/5.29.0/changelog.mdx
+++ b/src/pages/docs/release-notes/5.29.0/changelog.mdx
@@ -196,3 +196,44 @@ Shout out goes to our community member [Alan Lam](https://github.com/wllam44) fo
 This one belongs to the "small annoyances" department. The issue was only visible for Lambda function cold starts, when issuing a `Login` mutation. The login form would still be visible as if you're logged out, while in fact, you're authenticated against Cognito, but Webiny is in the process of loading your identity information. Hitting a cold start would look like nothing is happening, and you're supposed to log in again. From now on, a shiny new loading overlay will be visible for the duration of the GraphQL query.
 
 <Image src={loadingIdentityOverlay} title={"Loading Identity Overlay"}/> 
+
+## Development
+
+### Removed Pulumi Version Restriction
+
+Prior to this release, via the project root's [`package.json`](https://github.com/webiny/webiny-js/blob/v5.28.0/packages/cwp-template-aws/template/ddb/dependencies.json#L92-L93) file and its `resolutions` property, the versions of Pulumi NPM packages were locked for quite some time now. As the time passed by, these versions became more and more outdated, so we made sure this is no longer the case. From now on, every Webiny project will be accompanied by the latest version of the [Pulumi](/docs/infrastructure/pulumi-iac/iac-with-pulumi) CLI and related NPM packages.
+ 
+### Automatic Download of Pulumi Resource Plugin
+
+Prior to this release, during a project deployment, there was a chance users would stumble upon a Pulumi-related error, saying that the _resource provider plugin_ could not be found. 
+
+We've discovered that this would happen in case the user updated their [`@pulumi/aws`](https://www.npmjs.com/package/@pulumi/aws) NPM package, which would then immediately affect the Pulumi CLI and instruct it to also use the same version of the mentioned resource provider plugin. So, before proceeding with their deployment, users would be required to install the mentioned plugin manually. 
+
+In order remove the unnecessary DX friction, in case the mentioned resource plugin is missing, Webiny CLI will now automatically download it.  
+
+### Removed Some Of the Scaffolding Utilities
+
+As Webiny is slowly transitioning into [the Enterprise CMS platform that you can host in your cloud](https://www.webiny.com/), we decided it's time to start cutting down on some of the "serverless application framework" aspects of it. So, with this release, we're removing the following scaffolds:
+
+- Full Stack Application
+- GraphQL API
+- React Application
+- React Component Package
+
+On the other hand, the three scaffolds that will still be available via Webiny CLI are:
+
+- Extend GraphQL API
+- Extend Admin Area
+- Set up CI/CD
+
+We've also removed the related documentation, but note it'll still be available for previous versions of Webiny (just in case some users still need it).
+
+### Removed Custom App Tutorial
+
+Continuing from the [Removed Some Of the Scaffolding Utilities](/docs/release-notes/5.29.0/changelog#removed-some-of-the-scaffolding-utilities), we've also removed the Custom App Tutorial from our docs portal. The reasoning is the same - as the "serverless application framework" is no longer our focus, we've determined the article is no longer needed.
+
+The tutorial will still be available for previous versions of Webiny (just in case some users still need it).
+
+
+
+
