wip: improve tenancy bullet points

--- a/src/pages/docs/release-notes/5.29.0/upgrade-guide.mdx
+++ b/src/pages/docs/release-notes/5.29.0/upgrade-guide.mdx
@@ -52,6 +52,12 @@ yarn webiny deploy --env {environment}
 
 <Alert type="warning">
 
+  Make sure you deploy the entire system using the command shown above! You have to deploy all 3 apps (`api`, `admin`, and `website`) before using the system. Partial deploys may cause the upgrade to be applied incorrectly.
+
+</Alert>
+
+<Alert type="warning">
+
 As stated in the [Upgrade Webiny](../upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
 
 </Alert>
