--- a/src/pages/docs/release-notes/5.29.0/changelog.mdx
+++ b/src/pages/docs/release-notes/5.29.0/changelog.mdx
@@ -26,17 +26,21 @@ This release contains lots of important upgrades, from developer experience, to 
 
 Finally, after several months in the making, we're proud to present **Webiny Control Panel (Alpha)**!
 
-Webiny Control Panel is a brand new service that will provide additional benefits on top of existing Webiny projects! 
+Webiny Control Panel is a brand-new service that will provide additional benefits on top of existing Webiny projects! 
 
 For starters, it will enable teams to have a better overview of what's happening in their Webiny projects. Tracking the number of GraphQL API calls, CI/CD environments, and team members are just some of the features that are included in this initial Alpha release.
 
 <Image src={wcpDashboard}/>
 
-Webiny Control Panel will also provide a way to unlock special Webiny features, like **Multitenancy** and soon-to-be-available **Advanced Publishing Workflows**. And this is just the beginning! We already have a couple of other cool features on our roadmap, so definitely stay tuned for that.
+Webiny Control Panel will also provide a way to unlock special Webiny features, like **Multi-tenancy** and soon-to-be-available **Advanced Publishing Workflows**. And this is just the beginning! We already have a couple of other cool features on our roadmap, so definitely stay tuned for that.
 
 Ultimately, we believe that, with Webiny Control Panel, users will have a much easier way of managing multiple Webiny projects. And, with the new Webiny features that it will unlock, users will be able to take their Webiny projects to the next level.
 
-Sounds interesting? Head over to https://app.webiny.com and create your first Webiny Control Panel account today!      
+<Alert type="info" title="Can I Use This?">
+
+  Webiny Control Panel is now available to the subscribers of our Alpha waiting list. If you're interested in taking it for a spin, reach out via our [Community Slack](https://webiny.com/slack), and the team will provide the necessary details.
+  
+</Alert>
 
 <Alert type="warning" title="Can I Use This?">
 
