fix: update alert box title

--- a/src/pages/docs/release-notes/5.29.0/changelog.mdx
+++ b/src/pages/docs/release-notes/5.29.0/changelog.mdx
@@ -36,7 +36,7 @@ Webiny Control Panel will also provide a way to unlock special Webiny features, 
 
 Ultimately, we believe that, with Webiny Control Panel, users will have a much easier way of managing multiple Webiny projects. And, with the new Webiny features that it will unlock, users will be able to take their Webiny projects to the next level.
 
-<Alert type="info" title="Can I Use This?">
+<Alert type="info" title="Alpha Waiting List">
 
   Webiny Control Panel is now available to the subscribers of our Alpha waiting list. If you're interested in taking it for a spin, reach out via our [Community Slack](https://webiny.com/slack), and the team will provide the necessary details.
   
