--- a/src/docs/5.29.x/architecture/admin/overview.mdx
+++ b/src/docs/5.29.x/architecture/admin/overview.mdx
@@ -9,11 +9,17 @@ import overview from "./assets/overview/webiny_admin_overview.png";
 <Alert type="success" title="What you’ll learn">
 
 - the necessary cloud infrastructure resources on which the **Admin Area** project application relies on
+- what does the **Admin Area** project application represent
 
 </Alert>
 
-## Diagram
+## The Admin Area Project Application
 
+The **Admin Area** project application represents, as the name itself suggests, your administration area, which is a simple React single-page-application (SPA).
+
+With only two cloud infrastructure resources, the Amazon CloudFront and Amazon S3, hosting single page applications is simple, and most importantly, cost-effective.
+
+## Diagram
 
 <Image src={overview} title="Webiny Cloud Infrastructure - Admin Area - Overview" shadow={false}/>
 
