wip: update 5.29.0 docs

--- a/src/docs/5.29.x/architecture/admin/serving-application-files.mdx
+++ b/src/docs/5.29.x/architecture/admin/serving-application-files.mdx
@@ -14,12 +14,17 @@ import servingFiles from "./assets/serving-application-files/webiny_admin_page_v
 
 ## Diagram
 
-<Image src={servingFiles} title="Webiny Cloud Infrastructure - Admin Area - Serving Application Files" shadow={false}/>
+<Alert type="info">
 
+For brevity, the diagram doesn't include network-level cloud infrastructure resources, like region, VPC, availability zones, and so on. Check out the [Deployment Modes](../deployment-modes/introduction) section if you're interested in that aspect of the deployed cloud infrastructure.
+
+</Alert>
+
+<Image src={servingFiles} title="Webiny Cloud Infrastructure - Admin Area - Serving Application Files" shadow={false}/>
 
 ## Description
 
-The diagram shows how HTTP requests travel through the deployed cloud infrastructure and how files are returned back to the client. This happens repeatedly as the user opens and navigates through the **Admin Area** React application. Note that, when talking about the API HTTP requests that the **Admin Area** React application issues, those are still issued to the Amazon CloudFront distribution that's deployed as part of the [API project application](../../architecture/api/overview).
+The diagram shows how HTTP requests travel through the deployed cloud infrastructure and how files are returned back to the client. This happens repeatedly as the user opens and navigates through the **Admin Area** React application. Note that, when talking about the API HTTP requests that the **Admin Area** React application issues, those are still issued to the Amazon CloudFront distribution that's deployed as part of the [API](../../architecture/api/overview) project application.
 
 ## Steps
 
