--- a/src/docs/5.29.x/architecture/api/overview.mdx
+++ b/src/docs/5.29.x/architecture/api/overview.mdx
@@ -23,8 +23,6 @@ Of course, the application can additionally grow in terms of application code an
 
 ## Diagram
 
-<Image src={apiOverview} title="Webiny Cloud Infrastructure - API - Overview" shadow={false}/>
-
 <Alert type="info">
 
 For brevity, the diagram doesn't include network-level cloud infrastructure resources, like region, VPC, availability zones, and so on. Check out the [Deployment Modes](../deployment-modes/introduction) section if you're interested in that aspect of the deployed cloud infrastructure.
@@ -33,9 +31,11 @@ For brevity, the diagram doesn't include network-level cloud infrastructure reso
 
 <Alert type="info">
 
-Note that the stateful resources like Amazon S3, Amazon Cognito, Amazon DynamoDB and Amazon ElasticSearch are deployed as part of the [Core project application](../core/overview). These are still included in the diagram, just so it's more clear to the reader. 
+Note that the stateful resources like Amazon S3, Amazon Cognito, Amazon DynamoDB and Amazon ElasticSearch are deployed as part of the [Core] project application(../core/overview). These are still included in the diagram, just so it's more clear to the reader. 
 
 </Alert>
+
+<Image src={apiOverview} title="Webiny Cloud Infrastructure - API - Overview" shadow={false}/>
 
 ## Description
 
@@ -66,16 +66,16 @@ For storing data, the application relies on Amazon DynamoDB <diagram-letter>F</d
 
 ### 3. File Manager
 
-Besides extending the GraphQL schema located on the GraphQL Handler AWS Lambda function <diagram-letter>c</diagram-letter>, the File Manager application also brings a couple of dedicated Lambda functions. These perform various file-related tasks like uploading, downloading, and also image optimizations. It also brings a single Amazon S3 bucket, in which the files are ultimately stored <diagram-letter>H</diagram-letter>.
+Besides extending the GraphQL schema located on the GraphQL Handler AWS Lambda function <diagram-letter>c</diagram-letter>, the File Manager application also introduces a couple of dedicated AWS Lambda functions. These perform various file-related tasks like uploading, downloading, and also image optimizations. It also introduces a single Amazon S3 bucket, in which the files are ultimately stored <diagram-letter>H</diagram-letter>.
 
 For storing data and performing search queries, the application relies on Amazon DynamoDB <diagram-letter>F</diagram-letter> and Amazon ElasticSearch Service <diagram-letter>G</diagram-letter>, respectively.
 
 
 ### 4. Page Builder (with Prerendering Service)
 
-Except extending the GraphQL schema, the Page Builder application also introduces a couple of AWS Lambda functions that are responsible for importing and exporting of pages. 
+Besides extending the GraphQL schema, the Page Builder application also introduces a couple of AWS Lambda functions that are responsible for importing and exporting of pages. 
  
-Also, via an Amazon EventBridge (part of **Core** project application), it interacts with the prerendering service, that's deployed as part of the **Website** project application (more on this in the [Website](./../website/overview) section.
+Also, via an Amazon EventBridge (part of the **Core** project application), it interacts with the prerendering service, that's deployed as part of the **Website** project application (more on this in the [Website](./../website/overview) section.
 
 For storing data and performing search queries, the application relies on Amazon DynamoDB <diagram-letter>F</diagram-letter> and Amazon ElasticSearch Service <diagram-letter>G</diagram-letter>, respectively.
 
@@ -87,9 +87,15 @@ For storing data and performing search queries, the application relies on Amazon
 
 ### 6. Headless CMS
 
-Besides extending the GraphQL schema located on the GraphQL Handler <diagram-letter>C</diagram-letter> AWS Lambda function, the Headless CMS application also brings an extra Lambda function which is responsible for hosting the dynamic Headless CMS GraphQL API <diagram-letter>D</diagram-letter>. Note that on the diagram, it is shown "behind" the GraphQL Handler <diagram-letter>C</diagram-letter> Lambda function.
+Besides extending the GraphQL schema located on the GraphQL Handler <diagram-letter>C</diagram-letter> AWS Lambda function, the Headless CMS application also brings an extra AWS Lambda function which is responsible for hosting the dynamic Headless CMS GraphQL API <diagram-letter>D</diagram-letter>. Note that on the diagram, it is shown "behind" the GraphQL Handler <diagram-letter>C</diagram-letter> Lambda function.
 
 For storing data and performing search queries, the application relies on Amazon DynamoDB <diagram-letter>F</diagram-letter> and Amazon ElasticSearch Service <diagram-letter>G</diagram-letter>, respectively.
+
+<Alert type="info">
+
+Learn more about the Headless CMS API in the [Headless CMS GraphQL API Overview](./../../headless-cms/basics/graphql-api) article.  
+
+</Alert>
 
 ## FAQ
 
@@ -101,7 +107,7 @@ First, implementing a GraphQL Handler using AWS Lambda enables us and our users 
 
 The default Webiny applications rely on this fact as well. For example, the I18N application gives you the ability to check what is the current locale that the user is on. The Security application gives you the ability to perform custom authentication and authorization checks inside of your resolvers. Finally, it also makes it possible for the Headless CMS application to generate different GraphQL schemas, based on the current I18N locale.
 
-Secondly, you can test your GraphQL Handler easily with Jest, as you would do with any other JavaScript piece of code.
+Secondly, you can test your GraphQL Handler easily with a testing library like [Jest](https://jestjs.io/), as you would do with any other JavaScript piece of code.
 
 Finally, this approach makes it much easier for Webiny to be hosted on not just one cloud infrastructure provider (AWS), but on many more, like Microsoft Azure or Google Cloud Platform.
 
