--- a/src/docs/5.29.x/architecture/core/overview.mdx
+++ b/src/docs/5.29.x/architecture/core/overview.mdx
@@ -15,7 +15,7 @@ import coreOverview from "./assets/overview/webiny_core_app.png";
 
 ## The Core Project Application
 
-The **Core** project application represents your project's core cloud infrastructure resources. Essentially, these are your stateful resources, like [Amazon DynamoDB](https://aws.amazon.com/dynamodb/) for storing data, [Amazon S3](https://aws.amazon.com/s3/) for storing files, and [Amazon Cognito](https://aws.amazon.com/cognito/) for storing user information and authentication. Also, with the **Amazon DynamoDB and Amazon ElasticSearch** setup, the project application also deploys the [Amazon ElasticSearch Service](https://aws.amazon.com/opensearch-service/).
+The **Core** project application represents your project's core cloud infrastructure resources. Essentially, these are your stateful resources, like [Amazon DynamoDB](https://aws.amazon.com/dynamodb/) for storing data, [Amazon S3](https://aws.amazon.com/s3/) for storing files, and [Amazon Cognito](https://aws.amazon.com/cognito/) for storing user information and authentication. Also, with the **Amazon DynamoDB and Amazon ElasticSearch** setup, the project application also deploys an ElasticSearch cluster via the [Amazon Elasticsearch Service](https://aws.amazon.com/opensearch-service/).
 
 <Alert type="info">
 
@@ -27,14 +27,13 @@ The **Core** project application also deploys an [Amazon EventBridge](https://aw
 
 ## Diagram
 
-<Image src={coreOverview} title="Webiny Cloud Infrastructure - Core - Overview" shadow={false}/>
-
-
 <Alert type="info">
 
 For brevity, the diagram doesn't include network-level cloud infrastructure resources, like region, VPC, availability zones, and so on. 
 
 </Alert>
+
+<Image src={coreOverview} title="Webiny Cloud Infrastructure - Core - Overview" shadow={false}/>
 
 ## Description
 
