--- a/src/docs/5.29.x/architecture/introduction.mdx
+++ b/src/docs/5.29.x/architecture/introduction.mdx
@@ -33,9 +33,9 @@ In the following sections, we examine which cloud infrastructure resources get d
 
 Before we continue, a couple of words on different Webiny setups and deployment modes.
 
-## Different Setups
+## Different Database Setups
 
-At the moment, Webiny can be exclusively deployed into [Amazon Web Services (AWS)](https://aws.amazon.com/), where users can choose between two different setups:
+At the moment, Webiny can be exclusively deployed into [Amazon Web Services (AWS)](https://aws.amazon.com/), where users can choose between two different database setups:
 
 1. Amazon DynamoDB
 2. Amazon DynamoDB + Amazon ElasticSearch
