--- a/src/docs/5.29.x/architecture/website/overview.mdx
+++ b/src/docs/5.29.x/architecture/website/overview.mdx
@@ -44,6 +44,20 @@ The explanation on prerendering of pages, presented above, is a very brief one. 
 
 ## Diagram
 
+<Alert type="info">
+
+For brevity, the diagram doesn't include network-level cloud infrastructure resources, like region, VPC, availability zones, and so on. Check out the [Deployment Modes](../deployment-modes/introduction) section if you're interested in that aspect of the deployed cloud infrastructure.
+
+</Alert>
+
+<Alert type="info">
+
+Note that the Amazon DynamoDB and Amazon ElasticSearch databasesare deployed as part of the [Core](../core/overview) project application. Also, the GraphQL Handler AWS Lambda function is deployed as part of the [API](../api/overview) project application 
+
+These are still included in the diagram, just so it's more clear to the reader. 
+
+</Alert>
+
 <Image src={websiteOverview} title="Webiny Cloud Infrastructure - Website - Overview" shadow={false}/>
 
 ## Description
