--- a/src/docs/5.29.x/architecture/website/serving-pages.mdx
+++ b/src/docs/5.29.x/architecture/website/serving-pages.mdx
@@ -14,6 +14,20 @@ import websiteVisit from "./assets/serving-pages/webiny_website_visit.png";
 
 ## Diagram
 
+<Alert type="info">
+
+For brevity, the diagram doesn't include network-level cloud infrastructure resources, like region, VPC, availability zones, and so on. Check out the [Deployment Modes](../deployment-modes/introduction) section if you're interested in that aspect of the deployed cloud infrastructure.
+
+</Alert>
+
+<Alert type="info">
+
+Note that the Amazon DynamoDB and Amazon ElasticSearch databasesare deployed as part of the [Core](../core/overview) project application. Also, the GraphQL Handler AWS Lambda function is deployed as part of the [API](../api/overview) project application 
+
+These are still included in the diagram, just so it's more clear to the reader. 
+
+</Alert>
+
 <Image src={websiteVisit} title="Webiny Cloud Infrastructure - Website - Serving Pages" shadow={false}/>
 
 ## Description
@@ -26,7 +40,7 @@ This way, the static assets don't have to be uploaded twice (to both Amazon S3 b
 
 <Alert type="info">
 
-Learn more about the prerendering flow in the [Prerendering Pages](./prerendering-pages) section. 
+Learn more about the prerendering flow in the [Prerendering Pages](prerendering-pages) section. 
 
 </Alert>
 
