--- a/src/docs/5.29.x/architecture/admin/overview.mdx
+++ b/src/docs/5.29.x/architecture/admin/overview.mdx
@@ -21,6 +21,12 @@ With only two cloud infrastructure resources, the Amazon CloudFront and Amazon S
 
 ## Diagram
 
+<Alert type="info">
+
+For brevity, the diagram doesn't include network-level cloud infrastructure resources, like region, VPC, availability zones, and so on. Check out the [Deployment Modes](../deployment-modes/introduction) section if you're interested in that aspect of the deployed cloud infrastructure.
+
+</Alert>
+
 <Image src={overview} title="Webiny Cloud Infrastructure - Admin Area - Overview" shadow={false}/>
 
 ## Description
