--- a/src/docs/5.29.x/architecture/api/graphql-requests.mdx
+++ b/src/docs/5.29.x/architecture/api/graphql-requests.mdx
@@ -14,20 +14,19 @@ import apiGqlRequest from "./assets/graphql-requests/webiny_api_gql_request.png"
 
 ## Diagram
 
+<Alert type="info">
+
+For brevity, the diagram doesn't include network-level cloud infrastructure resources, like region, VPC, availability zones, and so on. Check out the [Deployment Modes](../deployment-modes/introduction) section if you're interested in that aspect of the deployed cloud infrastructure.
+
+</Alert>
+
+<Alert type="info">
+
+Note that the stateful resources like Amazon S3, Amazon Cognito, Amazon DynamoDB and Amazon ElasticSearch are deployed as part of the [Core] project application(../core/overview). These are still included in the diagram, just so it's more clear to the reader. 
+
+</Alert>
+
 <Image src={apiGqlRequest} title="Webiny Cloud Infrastructure - API - GraphQL Requests" shadow={false}/>
-
-
-<Alert type="info">
-
-For brevity, the diagram doesn't include network-level cloud infrastructure resources, like region, VPC, availability zones, and so on. Check out the [Default VPC](/docs/{version}/architecture/api/overview-vpc-default) and [Custom VPC](/docs/{version}/architecture/api/overview-vpc-custom) topics if you're interested in that aspect of the deployed cloud infrastructure.
-
-</Alert>
-
-<Alert type="info">
-
-Note that the stateful resources like Amazon S3, Amazon Cognito, Amazon DynamoDB and Amazon ElasticSearch are deployed as part of the [Core project application](../core/overview). These are still included in the diagram, just so it's more clear to the reader. 
-
-</Alert>
 
 ## Description
 
