--- a/src/docs/5.29.x/architecture/website/prerendering-pages.mdx
+++ b/src/docs/5.29.x/architecture/website/prerendering-pages.mdx
@@ -14,6 +14,20 @@ import websitePrerendering from "./assets/prerendering-pages/webiny_website_prer
 
 ## Diagram
 
+<Alert type="info">
+
+For brevity, the diagram doesn't include network-level cloud infrastructure resources, like region, VPC, availability zones, and so on. Check out the [Deployment Modes](../deployment-modes/introduction) section if you're interested in that aspect of the deployed cloud infrastructure.
+
+</Alert>
+
+<Alert type="info">
+
+Note that the Amazon DynamoDB and Amazon ElasticSearch databasesare deployed as part of the [Core](../core/overview) project application. Also, the GraphQL Handler AWS Lambda function is deployed as part of the [API](../api/overview) project application 
+
+These are still included in the diagram, just so it's more clear to the reader. 
+
+</Alert>
+
 <Image src={websitePrerendering} title="Webiny Cloud Infrastructure - Website - Prerendering" shadow={false}/>
 
 ## Description
@@ -30,12 +44,12 @@ To learn more about the **Core** and **API** project applications' cloud infrast
 
 ## Steps
 
-1. A user first publishes a page from the Admin Area. This is a simple GraphQL request, issued to the GraphQL API that's deployed as part of the **API** project application <diagram-letter>I</diagram-letter>.
+1. A user first publishes a page from the Admin Area. This is a simple GraphQL request, issued by the browser, to the GraphQL API that's deployed as part of the **API** project application <diagram-letter>I</diagram-letter>.
 2. In the process, an Amazon EventBridge <diagram-letter>H</diagram-letter> event is emitted, which will be handled by the Subscribe <diagram-letter>E3</diagram-letter> AWS Lambda function. 
 3. The Subscribe <diagram-letter>E3</diagram-letter> AWS Lambda function creates one or more Amazon SQS messages.
-4. Messages will be picked up by the Render <diagram-letter>E2</diagram-letter> AWS Lambda function, where it will issue an HTTP request to the Amazon CloudFront distribution <diagram-letter>D</diagram-letter>. 
+4. Messages will be picked up by the Render <diagram-letter>E2</diagram-letter> AWS Lambda function, which is responsible for actual prerendering of pages. The process starts by issuing an HTTP request to the Amazon CloudFront distribution <diagram-letter>D</diagram-letter>. 
 5. The request is forwarded to the Amazon S3 bucket <diagram-letter>C</diagram-letter>. This is where the actual React application is hosted, with all of its code and static assets.
-6. The mentioned Subscribe <diagram-letter>E3</diagram-letter> AWS Lambda function waits until the React application, served via the Amazon CloudFront distribution <diagram-letter>D</diagram-letter> has been completely rendered.
+6. The mentioned Subscribe <diagram-letter>E3</diagram-letter> AWS Lambda function waits until the React application, served back via the Amazon CloudFront distribution <diagram-letter>D</diagram-letter>, has been completely rendered.
 7. Finally, the function stores the generated HTML and related metadata in the Amazon S3 bucket <diagram-letter>B</diagram-letter>. Additional metadata also gets stored in the Amazon DynamoDB <diagram-letter>G</diagram-letter> that's part of the **Core** project application.  
 
 With these steps completed, the page is ready to be served to actual website visitors. Continue reading the [Serving Pages](serving-pages) section to learn more.
