wip: update 5.29.0 docs

--- a/src/docs/5.29.x/architecture/admin/serving-application-files.mdx
+++ b/src/docs/5.29.x/architecture/admin/serving-application-files.mdx
@@ -26,7 +26,7 @@ For brevity, the diagram doesn't include network-level cloud infrastructure reso
 
 The diagram shows how HTTP requests travel through the deployed cloud infrastructure and how files are returned back to the client. This happens repeatedly as the user opens and navigates through the **Admin Area** React application. Note that, when talking about the API HTTP requests that the **Admin Area** React application issues, those are still issued to the Amazon CloudFront distribution that's deployed as part of the [API](../../architecture/api/overview) project application.
 
-## Steps
+The flow consists of the following three steps:
 
 1. The HTTP request first reaches the Amazon CloudFront <diagram-letter>A</diagram-letter>.
 2. The request is forwarded to the Amazon S3 bucket <diagram-letter>B</diagram-letter>.
