--- a/src/docs/5.29.x/architecture/api/file-upload.mdx
+++ b/src/docs/5.29.x/architecture/api/file-upload.mdx
@@ -40,7 +40,7 @@ If you want to learn more, feel free to check out [a blog post](https://www.webi
 
 </Alert>
 
-The process consists of three steps:
+The flow consists of the following three steps:
 
 1. The client issues a GraphQL HTTP request which instructs the GraphQL Handler <diagram-letter>C</diagram-letter> to generate the necessary pre-signed POST data.
 2. Once the client receives the pre-signed POST data, in a new POST HTTP request, the data, and the actual file are uploaded to the S3 bucket <diagram-letter>G</diagram-letter>.
