--- a/src/docs/5.29.x/architecture/api/graphql-requests.mdx
+++ b/src/docs/5.29.x/architecture/api/graphql-requests.mdx
@@ -32,7 +32,7 @@ Note that the stateful resources like Amazon S3, Amazon Cognito, Amazon DynamoDB
 
 The diagram shows how HTTP requests (GraphQL queries and mutations) travel through the deployed cloud infrastructure. Request are primarily issued by the **Admin Area**, or **Website** applications, but of course, can be issued by other clients as well.
 
-The steps are the following:
+The flow consists of the following six steps:
 
 1. The GraphQL HTTP request first reaches the Amazon CloudFront <diagram-letter>A</diagram-letter>.
 2. The request is forwarded to the Amazon API Gateway <diagram-letter>B</diagram-letter>.
