--- a/src/docs/5.29.x/architecture/website/prerendering-pages.mdx
+++ b/src/docs/5.29.x/architecture/website/prerendering-pages.mdx
@@ -41,8 +41,7 @@ To learn more about the **Core** and **API** project applications' cloud infrast
 
 </Alert>
 
-
-## Steps
+The flow consists of the following seven steps:
 
 1. A user first publishes a page from the Admin Area. This is a simple GraphQL request, issued by the browser, to the GraphQL API that's deployed as part of the **API** project application <diagram-letter>I</diagram-letter>.
 2. In the process, an Amazon EventBridge <diagram-letter>H</diagram-letter> event is emitted, which will be handled by the Subscribe <diagram-letter>E3</diagram-letter> AWS Lambda function. 
