--- a/src/docs/5.29.x/architecture/website/serving-pages.mdx
+++ b/src/docs/5.29.x/architecture/website/serving-pages.mdx
@@ -44,7 +44,7 @@ Learn more about the prerendering flow in the [Prerendering Pages](prerendering-
 
 </Alert>
 
-## Steps
+The flow consists of the following four steps:
 
 1. Users visit a particular URL which leads to your website, with a web browser of their choice.
 2. The HTTP request, issued by the web browser, reaches the Amazon CloudFront <diagram-letter>A</diagram-letter>, which forwards it to the Amazon S3 bucket <diagram-letter>B</diagram-letter>. This is where the prerendered content was previously stored.
