--- a/src/docs/5.29.x/architecture/api/file-download.mdx
+++ b/src/docs/5.29.x/architecture/api/file-download.mdx
@@ -30,7 +30,9 @@ Note that the stateful resources like Amazon S3, Amazon Cognito, Amazon DynamoDB
 
 ## Description
 
-The diagram shows what happens every time a client tries to download a binary file. The process consists of three steps:
+The diagram shows what happens every time a client tries to download a binary file.
+
+The flow consists of the following four steps:
 
 1. The client issues a GET `/download/{file-key}` HTTP request, which reaches the Amazon API Gateway <diagram-letter>B</diagram-letter>, which then invokes the File Manager's Download AWS Lambda function <diagram-letter>C</diagram-letter>.
 2. The Download AWS Lambda function extracts the file key from the received HTTP request, and then fetches the file from the S3 bucket <diagram-letter>C</diagram-letter>.
