docs: remove code folder and expect api to be in apps folder

--- a/src/docs/5.29.x/enterprise/okta-integration.mdx
+++ b/src/docs/5.29.x/enterprise/okta-integration.mdx
@@ -78,7 +78,7 @@ You need to update two files, one for the `graphql` Lambda function and one for 
 <TabsComponent>
   <TabsItem title="Main GraphQL API">
 
-```diff-ts api/code/graphql/src/security.ts
+```diff-ts api/graphql/src/security.ts
 import { DocumentClient } from "aws-sdk/clients/dynamodb";
 import { createTenancyContext, createTenancyGraphQL } from "@webiny/api-tenancy";
 import { createStorageOperations as tenancyStorageOperations } from "@webiny/api-tenancy-so-ddb";
@@ -185,7 +185,7 @@ export default ({ documentClient }: { documentClient: DocumentClient }) => [
   </TabsItem>
   <TabsItem title="Headless CMS API">
 
-```diff-ts api/code/headlessCMS/src/security.ts
+```diff-ts api/headlessCMS/src/security.ts
 import { DocumentClient } from "aws-sdk/clients/dynamodb";
 import { createTenancyContext } from "@webiny/api-tenancy";
 import { createStorageOperations as tenancyStorageOperations } from "@webiny/api-tenancy-so-ddb";
@@ -330,9 +330,9 @@ Definition of this environment variable on Lambda functions has to be repeated f
 
 ## 4) Configure Admin App
 
-Open `apps/admin/code/src/App.tsx` and replace the Cognito plugin with Okta plugin:
+Open `apps/admin/src/App.tsx` and replace the Cognito plugin with Okta plugin:
 
-```diff-tsx apps/admin/code/src/App.tsx
+```diff-tsx apps/admin/src/App.tsx
 import React from "react";
 import { Admin } from "@webiny/app-serverless-cms";
 + import { Okta } from "@webiny/app-admin-okta";
@@ -353,9 +353,9 @@ export const App = () => {
 
 Next, we need to add this new `./okta` file which contains the factory for [Okta SignIn Widget](https://developer.okta.com/code/react/okta_react_sign-in_widget/) and [Okta Auth JS](https://developer.okta.com/code/react/okta_react/). This file allows you to configure the entire Okta SDK however you like, and also apply style changes if you need them.
 
-Copy the following code, and place it in `apps/admin/code/src/okta.ts`:
+Copy the following code, and place it in `apps/admin/src/okta.ts`:
 
-```tsx apps/admin/code/src/okta.ts
+```tsx apps/admin/src/okta.ts
 import { OktaFactory } from "@webiny/app-admin-okta";
 import OktaSignIn from "@okta/okta-signin-widget";
 import { OktaAuth } from "@okta/okta-auth-js";
