fix: remove outdated info / update links

--- a/src/docs/5.29.x/admin-area/new-app-tutorial/scaffolding.mdx
+++ b/src/docs/5.29.x/admin-area/new-app-tutorial/scaffolding.mdx
@@ -77,15 +77,7 @@ The locales selector is visible only when there are two or more locales to choos
 
 ### No Additional Cloud Infrastructure Resources
 
-The scaffold does not add any additional cloud infrastructure resources. The generated application code is simply added to the existing Admin Area React application code ([`apps/admin/code`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cwp-template-aws/template/apps/admin/code)).
-
-Of course, if additional cloud infrastructure resources are needed, you're free amend the [existing cloud infrastructure code](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cwp-template-aws/template/apps/admin/pulumi), and reference the added and deployed resources in your application code.
-
-<Alert type="success">
-
-Note that the supporting GraphQL API has its own cloud infrastructure code, located in the [`api/pulumi`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cwp-template-aws/template/api/pulumi) folder. So, if you're planning to add new cloud infrastructure resources that will be referenced within your GraphQL API application code, it makes more sense to introduce cloud infrastructure code changes there, and not in the [`apps/admin/pulumi`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cwp-template-aws/template/apps/admin/pulumi), linked above.
-
-</Alert>
+The scaffold does not add any additional cloud infrastructure resources. The generated application code is simply added to the existing Admin Area React application code ([`apps/code`](https://github.com/webiny/webiny-js/tree/v5.10.0/packages/cwp-template-aws/template/apps/admin/code)).
 
 ## Development
 
@@ -105,7 +97,7 @@ The following are the most essential files and folders that are generated in the
 
 <Alert type="info">
 
-By default, all of the files are generated in a new folder, located at `apps/admin/code/src/plugins/scaffolds/{dataModelName}`, for example `apps/admin/code/src/plugins/scaffolds/carManufacturers`.
+By default, all of the files are generated in a new folder, located at `apps/admin/src/plugins/scaffolds/{dataModelName}`, for example `apps/admin/src/plugins/scaffolds/carManufacturers`.
 
 </Alert>
 
