--- a/src/docs/5.29.x/core-development-concepts/basics/environment-variables.mdx
+++ b/src/docs/5.29.x/core-development-concepts/basics/environment-variables.mdx
@@ -140,7 +140,7 @@ Learn more about project applications and project organization in general, in th
 
 The following code shows the `webiny.config.ts` file of the `website` package, which is the one and only package of the **Website** project application:
 
-```diff-js pps/website/code/webiny.config.ts
+```diff-js apps/website/webiny.config.ts
 (...)
 
 module.exports = {
@@ -241,7 +241,7 @@ If set to `true`, all errors detected in the application runtime will be present
 
 ![Error overlay in debug mode](./assets/environment-variables/error-overlay.png)
 
-The `DEBUG` environment variable can be set via the application's `webiny.config.ts` config file, for example, [`apps/admin/code/webiny.config.ts`](https://github.com/webiny/webiny-js/blob/next/apps/admin/code/webiny.config.ts) or [`apps/website/code/webiny.config.ts`](https://github.com/webiny/webiny-js/blob/next/apps/website/code/webiny.config.ts):
+The `DEBUG` environment variable can be set via the application's `webiny.config.ts` config file, for example, [`apps/admin/webiny.config.ts`](https://github.com/webiny/webiny-js/blob/next/apps/admin/code/webiny.config.ts) or [`apps/website/webiny.config.ts`](https://github.com/webiny/webiny-js/blob/next/apps/website/code/webiny.config.ts):
 
 ```ts
 // Make sure to use the `REACT_APP_` prefix
